Fix submenu centering and z-index layering
- Changed .submenu width from 100% to auto with max-width 95% for proper centering
- Added margin: 20px auto 14px to center submenu horizontally and create space below header
- Fixed platformer game submenu fixed positioning with left: 50% and transform: translateX(-50%) for centering
- Increased submenu z-index from 3 to 99 to prevent header overlap
- Set top: 70px on fixed submenu to position below sticky navbar
- Added float: none; clear: both; to remove any floating behavior

--- a/_sass/open-coding/platformer-game.scss
+++ b/_sass/open-coding/platformer-game.scss
@@ -59,8 +59,10 @@ $spacing-unit: 2rem;
     @include dark-mode-color; // use the dark mode color scheme
     border: none; // remove setting as submenu
     position: fixed;
-    z-index: 3; // Position on Top of other elements, as well as ID buttons above
-    top: $spacing-unit * 1.865; // matches minima ".site-header min-height height", reference: https://github.com/jekyll/minima/blob/master/_sass/minima/_layout.scss
+    z-index: 99; // Position above other elements, below header/nav
+    top: 70px; // Place below the sticky header
+    left: 50%;
+    transform: translateX(-50%);
     width: fit-content;
 
     // Styles for the score and buttons
